# DeepMIMO

./: .gitignore  ChannelDataFormatter.py  ChannelDataLoader.py  DeepMIMOv3_spec.txt  README.md  blender_osm_export.py  blender_osm_main_loop.py  bounding_boxes.csv  city_scenarios.csv  cleaned_requirements.txt  comparison.py  constants.py  coords.csv  custom_cities.csv  dataset_utils.py  examples.py  gen_params.csv  generate_docs_imgs.py  gitignore  launch.json  main_blender.py  main_loop.py  main_sionna.py  new.py  param_generator.py  params.csv  process_data.py  pyproject.toml  raw_params.csv  ray_tracer.py  ray_tracing_base.ipynb  ray_tracing_base.py  ray_tracing_base_v4.ipynb  raytrace_insite.py  raytracing_guidelines.md  run_osm_extraction.py  scenario_generator.py  scenario_utils.py  scenarios.csv  scene_builder.py  (+9 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
DeepMIMO-matlab-new-data-format/: DeepMIMO_Dataset_Generator.asv  DeepMIMO_Dataset_Generator.m
DeepMIMO-matlab-new-data-format/DeepMIMO_functions/: DeepMIMO_generator.m
DeepMIMO-matlab-new-data-format/DeepMIMO_functions/plots/: plot_los_status.m
DeepMIMO-matlab-new-data-format/DeepMIMO_functions/readers/: read_raytracing_v2.m
DeepMIMO_p2m_converter/: readme.txt
WI_interface/: WirelessInsiteHelpers.py
blender_addons/: README.md
config/: materials.py  simulation_params.py
core/: ray_tracer.py  scene_builder.py
deepmimo/: __init__.py  api.py  buildings.py  comparison.py  config.py  consts.py  consts_v3.py  dataset.py  general_utilities.py  general_utils.py  help.py  info.py  material.py  materials.py  rt_params.py  scene.py  summary.py  txrx.py
deepmimo/converter/: __init__.py  converter.py  converter_utils.py
deepmimo/converter/aodt/: __init__.py  aodt_converter.py
deepmimo/converter/sionna_rt/: __init__.py  sionna_converter.py  sionna_exporter.py  sionna_materials.py  sionna_paths.py  sionna_rt_params.py  sionna_scene.py  sionna_txrx.py
deepmimo/converter/wireless_insite/: ChannelDataFormatter.py  ChannelDataLoader.py  city_vis.py  insite_buildings.py  insite_converter.py  insite_converter_v3.py  insite_materials.py  insite_paths.py  insite_rt_params.py  insite_scene.py  insite_setup.py  insite_txrx.py  interface_with_database.py  p2m_parser.py  parser.py  paths_parser.py  scenario_utils.py  setup_parser.py  xml_parser.py
deepmimo/generator/: __init__.py  ant_patterns.py  channel.py  core.py  dataset.py  downloader.py  generator_utils.py  geometry.py  utils.py  visualization.py
deepmimo/generator/python/: __init__.py  ant_patterns.py  channel.py  channel_batch.py  channel_params.py  construct_deepmimo.py  consts.py  core.py  dataset.py  downloader.py  generator.py  geometry.py  loader.py  params.py  raytracing_v2.py  raytracing_v3.py  sionna_adapter.py  utils.py  visualization.py
deepmimo/generator/python_old/: construct_deepmimo.py  generator.py  params.py  raytracing_v2.py  raytracing_v3.py  utils.py
deepmimo/integrations/: __init__.py
deepmimo/pipelines/: .gitignore  TxRxPlacement.py  __init__.py  blender_osm_export.py  blender_osm_export2.py  pipeline_consts.py  pipeline_runner.py  pipeline_utils.py  scene_builder.py
deepmimo/pipelines/sionna_rt/: main_loop.py  ray_tracer.py  scene_builder.py  sionna_raytracer.py  sionna_utils.py
deepmimo/pipelines/utils/: blender_utils.py  geo_utils.py  osm_utils.py  pipeline_utils.py
deepmimo/pipelines/wireless_insite/: README.md  blender_osm_export.py  bounding_boxes.csv  convert_ply2city.py  geo_utils.py  gitignore  input_preprocess.py  insite_raytracer.py  new.py  params.csv  raytrace_insite.py  run_osm_extraction.py  worldwide_scenario_gen.py
deepmimo_old_v3/: consts.py
deepmimo_old_v3/converter/wireless_insite/: insite_converter_v3.py
deepmimo_old_v3/generator/python/: construct_deepmimo.py  downloader.py  generator.py
docs/: comparing_raytracers.md  conf.py  configuration.md  contributing.md  contributing.rst  conventions.md  index.md  index.rst  installation.md  installation.rst  manual.ipynb  need_help.md  overview.md  quickstart.md  quickstart.rst  raytracing_guidelines.md  requirements-docs.txt  rst_to_md_converter.py  specs.md  workflow.txt
docs/_static/css/: custom.css
docs/api/: api.md  api.rst  config.md  converter.md  converter.rst  database.md  generator.md  generator.rst  integrations.md  materials.md  modules.md  modules.rst  overview.md  pipelines.md  scene.md  utils.md  utils.rst  visualization.md  visualization.rst
docs/objects/: channel_params.md  dataset.md  index.md  materials.md  scene.md
docs/resources/: comparing_raytracers.md  contributing.md  conventions.md  raytracing_guidelines.md  specs.md
docs/rst_backup/: contributing.rst  installation.rst
examples/: example_discarded_powers_TD_FD.py  examples.py
examples/tutorial_notebooks_v3/: DeepMIMOv3_Tutorials_End_to_end_Workflow.ipynb
generate_city/: convert_ply2city.py
osm_exports/bbox_34-06430723_-118-2630866_34-06560881_-118-2609365/: osm_gps_origin.txt  roads.ply  scenario_info.txt
osm_exports/bbox_40-68503298_-73-84682129_40-68597435_-73-84336302/: osm_gps_origin.txt  roads.ply  scenario_info.txt
osm_exports/bbox_41-88311487_-87-64432816_41-88437915_-87-64194209/: osm_gps_origin.txt  roads.ply  scenario_info.txt
others/: input_preprocess.py
resource/material/: ITU Concrete 3.5 GHz.mtl
scenarios/new_york/: BS1_BS.mat  BS1_UE_0-5148.mat  BS2_BS.mat  BS2_UE_0-5148.mat  BS3_BS.mat  BS3_UE_0-5148.mat  params.mat
scripts/: datasets_stats.py  dm_converter_loop.py  generate_docs_imgs.py  image_processor.py  insite_city_cleaner.py  insite_source_files_cleaner.py  move_insite_folder_out.py  pipeline_cleanup.py  pipeline_csv_gen.py  pipeline_runner.py  rename_single_param_json.py  road_debugging.py
test/: comp_next_pwr_10.py  read_pl_p2m.py  test_ant_patterns.py  test_end_to_end.py  test_rotate_angles.py  test_v3_correspondence.py  test_v3_correspondence_simple.py
test/webtests/: README.md  validate_extensions.py
utils/: addon_utils.py  blender_utils.py  hdf5_test.py  sionna_utils.py  xml_test.py  xml_utils.py
(+408 files in other folders)
