[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DeepMIMO"
version = "4.0.0a4"
authors = [
    { name = "João Morais" },
    { name = "Umut Demirhan" },
    { name = "Ahmed Alkhateeb" },
]
description = "DeepMIMO dataset generator library"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["MIMO", "ray tracing", "dataset", "DeepMIMO", "raytracing", "wireless"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.8.2",
    "numpy>=1.19.5",
    "scipy>=1.6.2",
    "tqdm>=4.59.0",
]

[project.optional-dependencies]
all = [
    # Ray tracing pipelines
    "utm",               # To be replaced by built-in (see geo_utils.py)
    "lxml",              # To be replaced by built-in (see insite_raytracer.py)
    "pandas",            # To be replaced by built-in (see pipeline_runner.py)
    "bpy==3.6.0",        # Requires Python 3.10. Python 3.10 goes up to bpy==4.0.
                         # Needed to do OSM extraction and 3D processing for ray tracing.
    "sionna-rt==1.0.2",  # Sionna Ray Tracer
    "mitsuba==3.6.2",    # Pinned by sionna-rt. Blender add-on likes 3.5.0. Issues?
    "plyfile",           # To read blender ply exports for insite_raytracer.py
    
    # Development
    "ipykernel",
]

[tool.setuptools.packages.find]
include = ["deepmimo*"]


[project.urls]
Homepage = "https://deepmimo.net/" 